# rust-rocket-auth

./: Cargo.toml  Rocket.toml
public/views/: index.html.hbs  loginPanel.html.hbs  registrationPanel.html.hbs  userArea.html.hbs  welcome.html.hbs
src/: data.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs  utils.rs
tests/: data_test.rs  routes_test.rs  utils_test.rs
