[package]
name = "rocket-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
rocket = "0.5.0"
rocket_contrib = { version = "0.4.11", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = "1.0.192"
